# CAS

Crop-Advisory/: README.md  pyproject.toml  replit.md
Crop-Advisory/AgriFlask/AgriFlask/: app.py  pyproject.toml  replit.md  view_database.py
Crop-Advisory/AgriFlask/AgriFlask/attached_assets/: Pasted-async-function-getCropAdvisory-const-resultsDiv-document-getElementById-cropResults--1762673118308_1762673118308.txt  index_1762668903509.html  script_1762668903510.js
Crop-Advisory/AgriFlask/AgriFlask/data/: market_prices.json
Crop-Advisory/AgriFlask/AgriFlask/static/: index.html  script.js  styles.css
