[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Farmer-Friendly Crop Advisory System"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "flask-jwt-extended>=4.7.1",
    "geopy>=2.4.1",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "werkzeug>=3.1.3",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.11",
    "sqlalchemy>=2.0.44",
]
